changes in navbar

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
           <ul class="flex space-x-4">
               <li><a href="/home" class="text-black-300 hover:text-cyan-300">Home</a></li>
-              <li><a href="#Exprience" class="text-black-300 hover:text-cyan-300">Exprience</a></li>
-              <li><a href="#AboutMe" class="text-black-300 hover:text-cyan-300">AboutMe</a></li>
-              <li><a href="#Contact" class="text-black-300 hover:text-cyan-300">Contact</a></li>
+              <li><a href="/Exprience" class="text-black-300 hover:text-cyan-300">Exprience</a></li>
+              <li><a href="/AboutMe" class="text-black-300 hover:text-cyan-300">AboutMe</a></li>
+              <li><a href="/Contact" class="text-black-300 hover:text-cyan-300">Contact</a></li>
               
           </ul>
       </div>
